Commit from Noteable
Pulled project file from remote storage

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -25,8 +25,8 @@
       "source": "# I have made changes\n\nimport pandas as pd\ndf = pd.read_csv('data/sharks_cleaned.csv')\ndf.shape",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T15:54:41.007938+00:00",
-          "start_time": "2023-10-04T15:54:40.777186+00:00"
+          "end_time": "2023-10-04T16:28:12.596881+00:00",
+          "start_time": "2023-10-04T16:28:12.363509+00:00"
         },
         "cell_id": "00002-82dd9c2b-4b23-4615-9c97-a0608eaf9080",
         "deepnote_to_be_reexecuted": false,
@@ -36,7 +36,7 @@
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 133,
         "noteable": {
-          "output_collection_id": "e87d5b7d-8847-4342-96ce-4115b9fedd0c"
+          "output_collection_id": "d6e2aa13-aa7c-4bb6-be20-4a6d497c41f0"
         }
       },
       "execution_count": 1,
@@ -57,14 +57,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T15:54:41.196338+00:00",
-          "start_time": "2023-10-04T15:54:41.012984+00:00"
+          "end_time": "2023-10-04T16:28:12.784567+00:00",
+          "start_time": "2023-10-04T16:28:12.601510+00:00"
         },
         "cell_id": "00004-22518ac7-9822-412a-ab6f-1d6f5fb070b8",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "6a6f2d05-91ac-4ffc-8fe7-ca1e0d654286"
+          "output_collection_id": "74e3211f-2b6b-42d4-a7ce-230472e6ee36"
         }
       },
       "source": "df.info()",
@@ -76,14 +76,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T15:54:41.546626+00:00",
-          "start_time": "2023-10-04T15:54:41.201258+00:00"
+          "end_time": "2023-10-04T16:28:13.152538+00:00",
+          "start_time": "2023-10-04T16:28:12.790093+00:00"
         },
         "cell_id": "00005-721b63b4-5f38-4cb7-b565-131446b59929",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "2bd831df-be13-4ee9-b1b6-957072fe794b"
+          "output_collection_id": "38e5f54b-4213-4ff6-93f3-4977c2e9ccc6"
         },
         "datalink": {
           "0cb4ad21-e605-4cf5-a692-5d7fa7138f7e": {
@@ -261,6 +261,50 @@
             "sampling_time": "2023-10-04T15:54:41.384553",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_206cf6c86692462d9b85730280481114"
+          },
+          "580b03e7-9a95-44e2-8342-6f83040d664a": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 7,
+              "orig_num_rows": 8,
+              "orig_size_bytes": 512,
+              "truncated_num_cols": 7,
+              "truncated_num_rows": 8,
+              "truncated_size_bytes": 512,
+              "truncated_string_columns": []
+            },
+            "display_id": "580b03e7-9a95-44e2-8342-6f83040d664a",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T16:28:12.987461",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_6808f68d7f39453f84014c1bb375e67a"
           }
         }
       },
@@ -273,14 +317,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T15:54:41.892698+00:00",
-          "start_time": "2023-10-04T15:54:41.551483+00:00"
+          "end_time": "2023-10-04T16:28:13.501791+00:00",
+          "start_time": "2023-10-04T16:28:13.158447+00:00"
         },
         "cell_id": "00006-9934f210-ecf4-4c0c-8035-d1067b39157f",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "49ff4dc5-730d-4a1b-b8dd-18c56f52adc2"
+          "output_collection_id": "89567489-3056-4bca-97c8-5baf153d8a0b"
         },
         "datalink": {
           "4182fedd-5188-40cf-99a8-35e499d2b1c7": {
@@ -590,6 +634,50 @@
             "sampling_time": "2023-10-04T15:54:41.732317",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_70d5fd265668450dbfe7245bf5a33f7a"
+          },
+          "6f6c9454-ef57-461e-9663-9b91059ef028": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 520,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 520,
+              "truncated_string_columns": []
+            },
+            "display_id": "6f6c9454-ef57-461e-9663-9b91059ef028",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T16:28:13.341386",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_6863a2dea09e440b99c1912a7b8e4b57"
           }
         },
         "dx": {
