--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -317,14 +317,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T16:28:13.501791+00:00",
-          "start_time": "2023-10-04T16:28:13.158447+00:00"
+          "end_time": "2023-10-04T16:29:50.930561+00:00",
+          "start_time": "2023-10-04T16:29:50.554316+00:00"
         },
         "cell_id": "00006-9934f210-ecf4-4c0c-8035-d1067b39157f",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "89567489-3056-4bca-97c8-5baf153d8a0b"
+          "output_collection_id": "5d933fc6-22d2-41dd-ba30-e4238c20d34b"
         },
         "datalink": {
           "4182fedd-5188-40cf-99a8-35e499d2b1c7": {
@@ -678,14 +678,99 @@
             "sampling_time": "2023-10-04T16:28:13.341386",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_6863a2dea09e440b99c1912a7b8e4b57"
+          },
+          "86054b32-c631-4187-a681-7b39c33bc939": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 1000,
+              "orig_size_bytes": 104000,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 1000,
+              "truncated_size_bytes": 104000,
+              "truncated_string_columns": []
+            },
+            "display_id": "86054b32-c631-4187-a681-7b39c33bc939",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T16:29:50.761924",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_f2498def31d64586b349d5d0c947a739"
           }
         },
         "dx": {
           "dashboard": {
             "multiViews": []
           },
-          "fieldMetadata": {},
-          "updated": 1696434891954,
+          "fieldMetadata": {
+            "active": {
+              "columnPosition": 2
+            },
+            "datetime": {
+              "columnPosition": 3
+            },
+            "dist_total": {
+              "columnPosition": 13
+            },
+            "gender": {
+              "columnPosition": 8
+            },
+            "id": {
+              "columnPosition": 4
+            },
+            "index": {
+              "columnPosition": 1
+            },
+            "latitude": {
+              "aggregation": "AVG",
+              "columnPosition": 5
+            },
+            "length": {
+              "columnPosition": 11
+            },
+            "longitude": {
+              "columnPosition": 6
+            },
+            "name": {
+              "columnPosition": 7
+            },
+            "species": {
+              "columnPosition": 9
+            },
+            "tagDate": {
+              "columnPosition": 12
+            },
+            "weight": {
+              "columnPosition": 10
+            }
+          },
+          "updated": 1696437002090,
           "views": [
             {
               "annotationRules": [],
@@ -710,11 +795,35 @@
               "isTransitory": false,
               "type": "public",
               "userID": ""
+            },
+            {
+              "annotationRules": [],
+              "chart": {
+                "facets": []
+              },
+              "chartMode": "grid",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "Table"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "2ed0df7c-0d5c-411e-82de-db527c688be6",
+              "isComment": false,
+              "isDefault": false,
+              "isTransitory": true,
+              "type": "public",
+              "userID": ""
             }
           ]
         }
       },
-      "source": "df.head(5)",
+      "source": "df.head(1000)",
       "execution_count": null,
       "outputs": [],
       "id": "05d5a01a"
