--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -770,7 +770,7 @@
               "columnPosition": 10
             }
           },
-          "updated": 1696437002090,
+          "updated": 1696437019836,
           "views": [
             {
               "annotationRules": [],
@@ -815,6 +815,306 @@
               },
               "id": "2ed0df7c-0d5c-411e-82de-db527c688be6",
               "isComment": false,
+              "isDefault": false,
+              "isTransitory": true,
+              "type": "public",
+              "userID": ""
+            },
+            {
+              "annotationRules": [],
+              "chart": {
+                "facets": []
+              },
+              "chartMode": "empty",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "New View"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "f912ee8f-d826-40db-a9e4-0420a110d55d",
+              "isDefault": false,
+              "type": "public",
+              "userID": ""
+            },
+            {
+              "annotationRules": [],
+              "chart": {
+                "facets": [
+                  {
+                    "chartMode": "bar",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "Albertina ": "#b3331d",
+                            "Brenda ": "#b86117",
+                            "Helen ": "#b6a756",
+                            "Oprah": "#122753"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "name",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "barProjection": "vertical",
+                      "combinationMode": "AVG",
+                      "dim1": "name",
+                      "labelType": "none",
+                      "metric1": "longitude",
+                      "metric3": "none",
+                      "proBarMode": "Combined",
+                      "secondBarMetric": "length"
+                    },
+                    "name": "bar",
+                    "title": "Combined Bar Chart"
+                  },
+                  {
+                    "chartMode": "scatter",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "Albertina ": "#b3331d",
+                            "Brenda ": "#b86117",
+                            "Helen ": "#b6a756",
+                            "Oprah": "#122753"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "name",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "confoColor": "name",
+                      "metric1": "longitude",
+                      "metric2": "length",
+                      "scatterplotSize": "none"
+                    },
+                    "name": "scatter",
+                    "title": "Scatterplot"
+                  },
+                  {
+                    "chartMode": "network",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "Female": "#122753"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "gender",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "dim1": "gender",
+                      "dim2": "species",
+                      "edgeMode": "edge list",
+                      "metric1": "latitude",
+                      "networkLabel": "scaled",
+                      "networkType": "sankey"
+                    },
+                    "name": "network",
+                    "title": "Sankey Network"
+                  },
+                  {
+                    "chartMode": "summary",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "7 March 2012": "#122753",
+                            "8 March 2012": "#b3331d"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "tagDate",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "boxplotOutliers": true,
+                      "dim1": "tagDate",
+                      "metric1": "dist_total",
+                      "summaryType": "boxplot"
+                    },
+                    "name": "summary",
+                    "title": "Boxplot w/ Outliers"
+                  },
+                  {
+                    "chartMode": "hierarchy",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "7 March 2012": "#122753",
+                            "8 March 2012": "#b3331d"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "tagDate",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "hierarchyType": "treemap",
+                      "metric1": "dist_total",
+                      "networkLabel": "scaled",
+                      "selectedDimensions": [
+                        "tagDate"
+                      ]
+                    },
+                    "name": "hierarchy",
+                    "title": "Treemap"
+                  },
+                  {
+                    "chartMode": "bar",
+                    "confoRules": [],
+                    "faceting": {
+                      "barProjection": "vertical",
+                      "combinationMode": "AVG",
+                      "dim1": "datetime",
+                      "groupOther": true,
+                      "labelType": "none",
+                      "metric1": "weight",
+                      "proBarMode": "Combined",
+                      "secondBarMetric": "none",
+                      "sortColumnsBy": "desc-val"
+                    },
+                    "name": "bar",
+                    "title": "Long Tail Bar Chart"
+                  },
+                  {
+                    "chartMode": "wordcloud",
+                    "confoRules": [],
+                    "faceting": {
+                      "textDataFormat": "token",
+                      "tokenMetric": "weight",
+                      "wordColor": "random",
+                      "wordData": "datetime"
+                    },
+                    "name": "wordcloud",
+                    "title": "Token Cloud"
+                  },
+                  {
+                    "chartMode": "pie",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "Albertina ": "#b3331d",
+                            "Brenda ": "#b86117",
+                            "Helen ": "#b6a756",
+                            "Oprah": "#122753"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "name",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "combinationMode": "SUM",
+                      "dim1": "name",
+                      "labelType": "none",
+                      "metric1": "id",
+                      "proBarMode": "Combined",
+                      "showTotal": true
+                    },
+                    "name": "pie",
+                    "title": "Donut Chart"
+                  }
+                ]
+              },
+              "chartMode": "empty",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "New View"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "f912ee8f-d826-40db-a9e4-0420a110d55d",
               "isDefault": false,
               "isTransitory": true,
               "type": "public",
