Commit from Noteable
Pulled project file from remote storage

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -25,8 +25,8 @@
       "source": "# I have made changes\n\nimport pandas as pd\ndf = pd.read_csv('data/sharks_cleaned.csv')\ndf.shape",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T16:28:12.596881+00:00",
-          "start_time": "2023-10-04T16:28:12.363509+00:00"
+          "end_time": "2023-10-04T17:42:26.129128+00:00",
+          "start_time": "2023-10-04T17:42:25.882194+00:00"
         },
         "cell_id": "00002-82dd9c2b-4b23-4615-9c97-a0608eaf9080",
         "deepnote_to_be_reexecuted": false,
@@ -36,7 +36,7 @@
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 133,
         "noteable": {
-          "output_collection_id": "d6e2aa13-aa7c-4bb6-be20-4a6d497c41f0"
+          "output_collection_id": "67ca6793-725e-40f6-a40b-d60c4d9fb999"
         }
       },
       "execution_count": 1,
@@ -57,14 +57,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T16:28:12.784567+00:00",
-          "start_time": "2023-10-04T16:28:12.601510+00:00"
+          "end_time": "2023-10-04T17:42:26.319469+00:00",
+          "start_time": "2023-10-04T17:42:26.134159+00:00"
         },
         "cell_id": "00004-22518ac7-9822-412a-ab6f-1d6f5fb070b8",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "74e3211f-2b6b-42d4-a7ce-230472e6ee36"
+          "output_collection_id": "3e1016f0-176b-41a9-a317-dfc41aebce0e"
         }
       },
       "source": "df.info()",
@@ -76,14 +76,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T16:28:13.152538+00:00",
-          "start_time": "2023-10-04T16:28:12.790093+00:00"
+          "end_time": "2023-10-04T17:42:26.711299+00:00",
+          "start_time": "2023-10-04T17:42:26.324769+00:00"
         },
         "cell_id": "00005-721b63b4-5f38-4cb7-b565-131446b59929",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "38e5f54b-4213-4ff6-93f3-4977c2e9ccc6"
+          "output_collection_id": "f1e3d117-97ab-49d1-9b4d-ef415fab395d"
         },
         "datalink": {
           "0cb4ad21-e605-4cf5-a692-5d7fa7138f7e": {
@@ -305,6 +305,50 @@
             "sampling_time": "2023-10-04T16:28:12.987461",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_6808f68d7f39453f84014c1bb375e67a"
+          },
+          "9aec4782-ab1e-497d-8c0c-efd8bb636155": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 7,
+              "orig_num_rows": 8,
+              "orig_size_bytes": 512,
+              "truncated_num_cols": 7,
+              "truncated_num_rows": 8,
+              "truncated_size_bytes": 512,
+              "truncated_string_columns": []
+            },
+            "display_id": "9aec4782-ab1e-497d-8c0c-efd8bb636155",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T17:42:26.546225",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_ae5b47df6d8c4200a07d8fd842db9f5b"
           }
         }
       },
@@ -317,14 +361,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T16:29:50.930561+00:00",
-          "start_time": "2023-10-04T16:29:50.554316+00:00"
+          "end_time": "2023-10-04T17:42:27.319290+00:00",
+          "start_time": "2023-10-04T17:42:26.919588+00:00"
         },
         "cell_id": "00006-9934f210-ecf4-4c0c-8035-d1067b39157f",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "5d933fc6-22d2-41dd-ba30-e4238c20d34b"
+          "output_collection_id": "6945ecc0-d0f3-4ebf-9e4a-b10025afdb94"
         },
         "datalink": {
           "4182fedd-5188-40cf-99a8-35e499d2b1c7": {
@@ -722,6 +766,50 @@
             "sampling_time": "2023-10-04T16:29:50.761924",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_f2498def31d64586b349d5d0c947a739"
+          },
+          "d3176e73-af66-4a07-8a17-10e58500b8fa": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 1000,
+              "orig_size_bytes": 104000,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 1000,
+              "truncated_size_bytes": 104000,
+              "truncated_string_columns": []
+            },
+            "display_id": "d3176e73-af66-4a07-8a17-10e58500b8fa",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T17:42:27.143598",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_51e2437d73934fe2a6ba161962a12377"
           }
         },
         "dx": {
@@ -770,7 +858,7 @@
               "columnPosition": 10
             }
           },
-          "updated": 1696437019836,
+          "updated": 1696441358564,
           "views": [
             {
               "annotationRules": [],
