Commit from Noteable
Pulled project file from remote storage

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -858,7 +858,7 @@
               "columnPosition": 10
             }
           },
-          "updated": 1696441358564,
+          "updated": 1696441387709,
           "views": [
             {
               "annotationRules": [],
@@ -1205,6 +1205,59 @@
               "id": "f912ee8f-d826-40db-a9e4-0420a110d55d",
               "isDefault": false,
               "isTransitory": true,
+              "type": "public",
+              "userID": ""
+            },
+            {
+              "annotationRules": [],
+              "chart": {
+                "confoColor": "name",
+                "facets": [],
+                "metric1": "longitude",
+                "metric2": "length",
+                "scatterplotSize": "none"
+              },
+              "chartMode": "scatter",
+              "confoRules": [
+                {
+                  "colorOpts": {
+                    "color": null,
+                    "colorsHash": {
+                      "Albertina ": "#b3331d",
+                      "Brenda ": "#b86117",
+                      "Helen ": "#b6a756",
+                      "Oprah": "#122753"
+                    },
+                    "cond": null,
+                    "gradient": null,
+                    "max": "",
+                    "min": "",
+                    "mode": "categorical",
+                    "scale": null,
+                    "thresholdColors": null,
+                    "thresholdValues": null
+                  },
+                  "columnType": "Dimension",
+                  "fieldName": "name",
+                  "id": "data-prism",
+                  "index": 0,
+                  "name": ""
+                }
+              ],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "New View"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "c6926729-849b-4675-bb68-e6445db725bc",
+              "isComment": false,
+              "isDefault": false,
+              "isTransitory": false,
               "type": "public",
               "userID": ""
             }
